@@ -1,3 +1,10 @@
+2003-04-07  Vino Crescini  <jcrescin@cit.uws.edu.au>
+
+	* kb/kb.h :
+	* kb/kb.cpp :
+
+	  - Added initial state in generate_nlp().
+
 2003-04-04  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
 	* kb/kb.h :
